add img + change beginning english

--- a/blog/_posts/2018-09-2-LOCAM.md
+++ b/blog/_posts/2018-09-2-LOCAM.md
@@ -34,7 +34,8 @@ MathJax.Hub.Queue(function() {
 
 # Codingame
 
-Codingame is a website where you can solve puzzles, work on optimization problems, and build bots for games. You have access to a vast range of codding languages, and I personally mainly used Java. According to the puzzles you solve, your ranking in the multiplayer games and the contests, you get a global ranking on the website. I mainly worked on multiplayer problems: the creation of bots for several games: a card game, a quidditch match, a Tron battle, etc.
+Codingame is a website where you can solve puzzles, work on optimization problems, and build bots for games. You have access to a vast range of codding languages, and I personally mainly used Java, Python & C++.
+What I enjoy the most is to build AI for multiplayer games: a card game, a quidditch match, a Tron battle, etc.
 
 ![quidditch]({{ site.url }}/imgs/2019-08-06-DRL-FM-review/quidditch.png)
 
@@ -58,8 +59,8 @@ Codingame is a website where you can solve puzzles, work on optimization problem
 
 This is a [game](https://www.codingame.com/multiplayer/bot-programming/legends-of-code-magic) created by [Jakub Kowalski and Radosław Miernik](https://jakubkowalski.tech/Projects/LOCM/), in cooperation with Codingame. This is a card game, opposing two players. The game is turn-based, zero-sum, and without a possibility to tie. It is important to note that you only have 100ms to play each turn. The game is separated into two parts :
 
-* First, you have to draw 30 cards from a pool of 160 cards. During 30 turns, the game will propose three cards, and you choose the one you want.
-* After that, each player will play. Several actions are available: attack with your cards, use items, invoke cards with the available mana.
+* First, you have to draw 30 cards from a pool of 160 cards. During 30 turns, the game will propose you three cards and you have to choose the one you wanna pick.
+* After that, each player will play. I can do several actions: summon a creatures, attack the opponent, use an item, etc.
 * The game will end whenever someone's hp drop to zero.
 
 ![locam-1]({{ site.url }}/imgs/2019-08-06-DRL-FM-review/locam-1.png)
@@ -72,21 +73,27 @@ Overview of the game, with both players HP, mana, cards in hand and cards on the
 
 ## The rules
 
-We can split the game into several components: Cards, Mana, Creatures, and Items.
+We can split the game into several components: Drawings, Mana, Creatures, and Items.
 
-* Cards: Player1 starts with four cards, while Player2 begins with five cards. Each turn, you can draw a new card. Some Creatures or Items can make you draw more than one card per turn.
+* Drawings: The first player starts with four cards, while the opponent begins with five. Each turn you will draw a new one (some of them might even allow you to draw several cards at the same time).
 
-* Mana: You can only use a card if you have enough mana for the specific card. Player1 starts with one mana, Player2 begins at 2. You gain one point of mana for each turn you play until you reach 12 mana.
+* Mana: You can only use a card if you have enough mana. Both players start with one Mana, and gain one for every turn they play.
 
-* Creatures: Creatures have a mana cost, attack points, and defense points. Some creatures start with specific abilities. By default, creatures can't attack the turn they are summoned, and they can attack once per turn only. When a creature attacks another one, they both deal damage equals to their attack to the defense of the other creature. When a creature attacks the opponent, it deals damage equals to its attack to the HP of the opponent. Creatures can also have different abilities; I will list them below.
+* Creatures: Creatures have a mana cost, attack points, and defense points. Some creatures start with specific abilities. By default, creatures can't attack the turn they are summoned, and they can attack only once per turn. When a creature attacks another one, they both deal damage equals to their attack to the defense of the other creature. When a creature attacks the opponent, it deals damage equals to its attack to the HP of the opponent.
 
-* Items: When played, items have an immediate and permanent effect on the board or the players. They can modify the attack or defense of a creature, add or remove abilities. They can also damage or heal the opponent and you. You can find three types of items: green items (positive effect on your creatures), red items (harmful effect of the opponent's creatures) and blue items (can target yourself or the opponent directly).
+* Items: When played, items have an immediate and permanent effect on the board or the players. They can modify the attack or defense of a creature, add or remove abilities. They can also damage or heal the opponent or yourself. You can find three types of items: green items (positive effect on your creatures), red items (harmful effect on the opponent's creatures) and blue items (effects on yourself or the opponent directly).
 
 As for the six special abilities :
 
-ADD CARD IMG
+![locam-1]({{ site.url }}/imgs/2019-08-06-DRL-FM-review/LOCAM-eg-card.png)
 
-* Breakthrough: Creatures with Breakthrough can deal extra damage to the opponent when they attack enemy creatures. If their attack damage is higher than the defending creature's defense, the excess damage is dealt to the opponent.
+<center>
+<em>
+One of the strongest card in Legends of Code & Magic, with the six different abilities. 
+</em>
+</center>
+
+* Breakthrough: Creatures with Breakthrough can deal extra damage to the opponent when they attack enemy creatures. If their attack is higher than the defending creature's defense, the excess damage is dealt to the opponent.
 
 * Charge: Creatures with Charge can attack the turn they are summoned.
 
@@ -100,9 +107,7 @@ ADD CARD IMG
 
 # My bot
 
-I split my bot into four different parts. The first one will take care of the drafting phase. It is a hardcode evaluation of every card from the game. The second one is how you choose which card you'll summon. Here, I used a Monte-Carlo algorithm (MC), with an evaluation function. The third part needs you to decide which card will attack who.
-
-Again, I combined an MC with a MinMax algorithm. Finally, the last part is the heuristic I used. Every piece of my code is using heuristic and pruning to help my code take better decisions since it is mainly based on chance.
+My bot was split in several parts. The first one was dealing with the Drafting phase. It was simple heuristics with a score for each card. The second part was dealing with the summoning phase while the last one dealt with the attacking phase. I built both of them with variants of  Monte-Carlo methods and Monte-Carlo Tree Search.
 
 You only have a limited amount of time when you play :
 
