--- a/blog/_posts/2018-09-2-LOCAM.md
+++ b/blog/_posts/2018-09-2-LOCAM.md
@@ -89,7 +89,7 @@ As for the six special abilities :
 
 <center>
 <em>
-One of the strongest card in Legends of Code & Magic, with the six different abilities. 
+One of the strongest card in Legends of Code & Magic, with the six different abilities.
 </em>
 </center>
 
@@ -140,7 +140,7 @@ You only have a limited amount of time when you play :
 
 Intuitively, a Monte-Carlo method means that we will use several random draws to approximate the value of something. It could mean: shooting random arrows in a square with a circle in it. The proportion of arrows into the circle will allow us to approximate $\pi$. In a game, we could simulate random moves and evaluate them to find the best sequence of move possible.
 
-On a more mathematical point of view, let $x_1, x_2, ..., x_N$ *i.i.d.* laws, following the same law as a random variable $X$. For any borelian fuction $f$ (with $f(X) \in L^1$), we can calculate the following approximation :
+On a more mathematical point of view, let $x_1, x_2, ..., x_N$ be *i.i.d.* laws, following the same law as a random variable $X$. For any borelian fuction $f$ (with $f(X) \in L^1$), we can calculate the following approximation :
 
 $$\mathbb{E} (f(X)) = \frac{1}{N} \displaystyle \sum_{i=1}^{N} f(x_i) $$
 
@@ -228,11 +228,21 @@ After some talks with other coders from the contest, the idea of hardcoding a sc
 <div class="message">
 <p><strong>Genetic Algorithms</strong></p>
 
-To keep things as simple as possible, a genetic algorithm starts with a population made of a fixed number of individuals. At every generation, you compute the score of each individual, and then keep some of the best for the next generation. To build the rest of this next generation, several options are available: mutations, melting two existing solutions, tournament to keep some of them, etc.
+<p>To keep things as simple as possible, a genetic algorithm starts with a population made of a fixed number of individuals. At every generation, you compute the score of each individual, and then keep some of the best for the next generation.</p>
+
+<p>To build the rest of this next generation, several options are available: mutations, melting two existing solutions, tournament to keep some of them, etc.</p>
 
 This is an optimization algorithm I love, and I used it a lot on Codingame.
 
-ADD IMG
+<p align="center">
+  <img src="{{ site.url }}/imgs/2019-08-06-DRL-FM-review/LOCAM-GA.png">
+</p>
+<center>
+<em>
+Overview of a Genetic Algorithm. The part with different implementations can use tournament, random selections, full crossover or only mutations of the best individuals.
+ </em>
+ </center>
+
 </div>
 
 In order to evaluate each individual, I used several methods. All of them are based on the same strategy: playing many games with this draft against another fixed one, and keeping the win rate as the score of the individuals.
@@ -313,7 +323,7 @@ The last one was based on the tempo of the player. Here is a definition from an 
 * The speed at which a player is reaching his/her win condition. An alternate interpretation of the original definition that is especially useful when discussing decks that don't mainly win by gaining board control or that don't aim at reaching that goal at the start of the game.
 * The value of the effect on the board state divided by the mana used. The main upside of this definition is its being in the form of a mathematical formula because in the future it could be applied to calculations.
 
-I tried to evaluate both my and the opponent's tempo, but this wasn't successful either. This evaluation was using both player's HP, the defense of the cards they had on their board, and the mana both players had.
+I tried to evaluate both my and the opponent's tempo, but this wasn't successful either. This evaluation was in fact pretty complex too, using both players boards and life.
 
 ## Summoning phase
 
