--- a/blog/_posts/2018-09-2-LOCAM.md
+++ b/blog/_posts/2018-09-2-LOCAM.md
@@ -85,7 +85,9 @@ We can split the game into several components: Drawings, Mana, Creatures, and It
 
 As for the six special abilities :
 
-![locam-1]({{ site.url }}/imgs/2019-08-06-DRL-FM-review/LOCAM-eg-card.png)
+<p align="center">
+  <img src="{{ site.url }}/imgs/2019-08-06-DRL-FM-review/LOCAM-eg-card.png">
+</p>
 
 <center>
 <em>
