--- a/blog/_posts/2018-09-2-LOCAM.md
+++ b/blog/_posts/2018-09-2-LOCAM.md
@@ -218,7 +218,7 @@ Explanation of an MCTS, reproduced from <a href="https://www.aaai.org/Papers/AII
 An MCTS supposes that it is possible (in a reasonable amount of time) to reach a terminal state. Now, this might not be possible: only partial observations (like in this game, where you can't predict the hand of the opponent), computational time that is too heavy, etc. Therefore, it is interesting to define an evaluation function (like in Evolutianory Algorithm): the goal of such a function is to characterize how good (or bad) a state of the game is.
 
 <div class="message">
-For example in a game of tic-tac-toe, it could be number of <em> opportunity </em> (square that would make you win if you played here)
+For example in a game of tic-tac-toe, it could be the number of <em> opportunity </em> (square that would make you win if you played here)
 </div>
 
 ## Draft phase
