--- a/blog/_posts/2018-09-2-LOCAM.md
+++ b/blog/_posts/2018-09-2-LOCAM.md
@@ -59,8 +59,8 @@ What I enjoy the most is to build AI for multiplayer games: a card game, a quidd
 
 This is a [game](https://www.codingame.com/multiplayer/bot-programming/legends-of-code-magic) created by [Jakub Kowalski and Radosław Miernik](https://jakubkowalski.tech/Projects/LOCM/), in cooperation with Codingame. This is a card game, opposing two players. The game is turn-based, zero-sum, and without a possibility to tie. It is important to note that you only have 100ms to play each turn. The game is separated into two parts :
 
-* First, you have to draw 30 cards from a pool of 160 cards. During 30 turns, the game will propose you three cards and you have to choose the one you wanna pick.
-* After that, each player will play. I can do several actions: summon a creatures, attack the opponent, use an item, etc.
+* First, you have to draw 30 cards from a pool of 160 cards. During 30 turns, the game will propose you three cards, and you have to choose the one you want to pick.
+* After that, each player will play. I can do several actions: summon a creature, attack the opponent, use an item, etc.
 * The game will end whenever someone's hp drop to zero.
 
 ![locam-1]({{ site.url }}/imgs/2019-08-06-DRL-FM-review/locam-1.png)
@@ -77,7 +77,7 @@ We can split the game into several components: Drawings, Mana, Creatures, and It
 
 * Drawings: The first player starts with four cards, while the opponent begins with five. Each turn you will draw a new one (some of them might even allow you to draw several cards at the same time).
 
-* Mana: You can only use a card if you have enough mana. Both players start with one Mana, and gain one for every turn they play.
+* Mana: You can only use a card if you have enough mana. Both players start with one Mana and gain one for every turn they play.
 
 * Creatures: Creatures have a mana cost, attack points, and defense points. Some creatures start with specific abilities. By default, creatures can't attack the turn they are summoned, and they can attack only once per turn. When a creature attacks another one, they both deal damage equals to their attack to the defense of the other creature. When a creature attacks the opponent, it deals damage equals to its attack to the HP of the opponent.
 
@@ -109,7 +109,7 @@ One of the strongest card in Legends of Code & Magic, with the six different abi
 
 # My bot
 
-My bot was split in several parts. The first one was dealing with the Drafting phase. It was simple heuristics with a score for each card. The second part was dealing with the summoning phase while the last one dealt with the attacking phase. I built both of them with variants of  Monte-Carlo methods and Monte-Carlo Tree Search.
+My bot was split into several parts. The first one was dealing with the Drafting phase. It was a simple heuristic with a score for each card. The second part was dealing with the summoning phase, while the last one dealt with the attacking phase. I built both of them with variants of  Monte-Carlo methods and Monte-Carlo Tree Search.
 
 You only have a limited amount of time when you play :
 
@@ -223,7 +223,7 @@ For example in a game of tic-tac-toe, it could be the number of <em> opportunity
 
 ## Draft phase
 
-When the contest started, I believed that the draft phase would not be the crucial part of the contest. As it will turn out, this was a mistake. My first strategy was to follow a mana curve (a sort of gaussian, with a mean at 6 of mana). If this strategy worked fine, this was not the best choice.
+When the contest started, I believed that the draft phase would not be the crucial part of the contest. As it will turn out, this was a mistake. My first strategy was to follow a mana curve (a sort of gaussian, with a mean at 6 of mana). If this strategy worked fine at first, this was not the best choice.
 
 After some talks with other coders from the contest, the idea of hardcoding a score for each card emerged. The plan would then be to draw the card with the higher score. The real question was: how to compute such scores? The strategy I used was to build genetic algorithms; each individual of the population being a set of scores for each card.
 
@@ -324,7 +324,7 @@ The last one was based on the tempo of the player. Here is a definition from an 
 * The speed at which a player is reaching his/her win condition. An alternate interpretation of the original definition that is especially useful when discussing decks that don't mainly win by gaining board control or that don't aim at reaching that goal at the start of the game.
 * The value of the effect on the board state divided by the mana used. The main upside of this definition is its being in the form of a mathematical formula because in the future it could be applied to calculations.
 
-I tried to evaluate both my and the opponent's tempo, but this wasn't successful either. This evaluation was in fact pretty complex too, using both players boards and life.
+I tried to evaluate both my and the opponent's tempo, but this wasn't successful either. This evaluation was, in fact, pretty complex too, using both players boards and life.
 
 ## Summoning phase
 
