new draft blog pimobile

--- a/blog/_posts/2020-03-13-Pimobile.md
+++ b/blog/_posts/2020-03-13-Pimobile.md
@@ -79,19 +79,19 @@ The PI-Mobile V1 trained on a track we built inside my house. It is made of pape
 </p>
 
 <p align="center">
-  <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/track-1">
+  <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/track-1.png">
 </p>
 
 ## The learning algorithm : DQL
 
 <p align="center">
-  <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/graph-agent">
+  <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/graph-agent.png">
 </p>
 
 We used a Deep Q-learning agent to train our car to drive, with some mineurs modifications: human control. Since the agent is not interacting with a simulation but with the real wolrd, we are the one telling it when to stop, or when it's good or bad. We setted up several keys: one to pause the current episode, one to finish it when the car is doing something bad, and finally one to end the episode when the car reaches the end of the track. The algorithm is available below : 
 
 <p align="center">
-  <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/algo-1">
+  <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/algo-1.png">
 </p>
 
 Regarding the reward, we used a simple function: 1 at every step, except when the car fails (-1) or when it reaches the end of the trach (time spent on the track). The goal being to drive properly, and as fast as it could. 
@@ -115,7 +115,7 @@ public double reward(String key, double time_since_start) {
 Overall, our car learned to drive on the testing track in less than 50 episodes (arround an hour and a half). We tracked the distance made autonomously on the testing track every 5 training episodes : 
 
 <p align="center">
-  <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/distance-v1">
+  <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/distance-v1.png">
 </p>
 
 An example of a training episode is available below : 
