new draft blog pimobile

--- a/blog/_posts/2020-03-13-Pimobile.md
+++ b/blog/_posts/2020-03-13-Pimobile.md
@@ -33,7 +33,7 @@ MathJax.Hub.Queue(function() {
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-AMS_HTML-full"></script>
 
 
-When we started talking about this project with [Matthias](add linkedin link), we knew that both building a Lego motorized car, and learning to drive with real life Deep Reinforcement Learning was possible. However, we wanted to do both at the same time. We recently acquired a Raspberry Pi 4b and knew that the power limitations set by the previous model vanished. However, we didn't know exactly how to fit everything into a lego car, and how to train it properly. We came up with 2 cars, and 2 methods of learning :
+When we started talking about this project with [Matthias]([add linkedin link](https://www.linkedin.com/in/matthias-cremieux-4b1222153/)), we knew that both building a Lego motorized car, and learning to drive with real life Deep Reinforcement Learning was [possible](https://arxiv.org/pdf/1807.00412.pdf). However, we wanted to do both at the same time. We recently acquired a Raspberry Pi 4b and knew that the power limitations set by the previous model vanished. However, we didn't know exactly how to fit everything into a lego car, and how to train it properly. We came up with 2 cars, and 2 methods of learning :
 
 * a first model (that looks terrible), driving with a Deep Reinforcement Learning Agent
 * a much better car, driving with an Imitation Learning algorithm
@@ -100,9 +100,9 @@ Regarding the reward, we used a simple function: 1 at every step, except when th
 public double reward(String key, double time_since_start) {
     double reward = 0;
     
-    if (key == 'stop') {
+    if (key == stop) {
         reward = -1;
-    } else if (key == 'end') {
+    } else if (key == end) {
         reward = (10. - time_since_start)/100.;
     } else {
         reward = 1;
