new draft blog pimobile

--- a/blog/_posts/2020-03-13-Pimobile.md
+++ b/blog/_posts/2020-03-13-Pimobile.md
@@ -38,9 +38,7 @@ When we started talking about this project with [Matthias]([add linkedin link](h
 * a first model (that looks terrible), driving with a Deep Reinforcement Learning Agent
 * a much better car, driving with an Imitation Learning algorithm
 
-<p align="center">
-  <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/car-v1.jpeg">
-</p>
+![car1]({{ site.url }}/imgs/2020-03-13-Pimobile/car-v1.jpeg)
 
 <p align="center">
   <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/car-v2.jpeg">
