new draft blog pimobile

--- a/blog/_posts/2020-03-13-Pimobile.md
+++ b/blog/_posts/2020-03-13-Pimobile.md
@@ -40,9 +40,7 @@ When we started talking about this project with [Matthias]([add linkedin link](h
 
 ![car1]({{ site.url }}/imgs/2020-03-13-Pimobile/car-v1.jpeg)
 
-<p align="center">
-  <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/car-v2.jpeg">
-</p>
+![car2]({{ site.url }}/imgs/2020-03-13-Pimobile/car-v2.jpeg)
 
 The first one drove on an inside track built in my home, while the second drove outside.
 
