new draft blog pimobile

--- a/blog/_posts/2020-03-13-Pimobile.md
+++ b/blog/_posts/2020-03-13-Pimobile.md
@@ -38,9 +38,13 @@ When we started talking about this project with [Matthias]([add linkedin link](h
 * a first model (that looks terrible), driving with a Deep Reinforcement Learning Agent
 * a much better car, driving with an Imitation Learning algorithm
 
-![car1]({{ site.url }}/imgs/2020-03-13-Pimobile/car-v1.jpeg)
+<p align="center">
+  <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/car-v1.jpeg">
+</p>
 
-![car2]({{ site.url }}/imgs/2020-03-13-Pimobile/car-v2.jpeg)
+<p align="center">
+  <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/car-v2.jpeg">
+</p>
 
 The first one drove on an inside track built in my home, while the second drove outside.
 
@@ -71,7 +75,7 @@ We also used a raspberry camera on top of the car. This camera was the only inpu
 The PI-Mobile V1 trained on a track we built inside my house. It is made of paper and is of 8 meters long. However, it has a bridge in the middle, a bridge the car could never learn to pass properly (because it struggles going only forward because of bad conception...). Because of this, we splitted the track into 2 parts: a training part and a testing part :
 
 <p align="center">
-  <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/img-track-v1.jpeg">
+  <img src="{{ site.url }}/imgs/2019-08-06-DRL-FM-review/R100-GIF.gif">
 </p>
 
 <p align="center">
