new draft blog pimobile

--- a/blog/_posts/2020-03-13-Pimobile.md
+++ b/blog/_posts/2020-03-13-Pimobile.md
@@ -82,7 +82,7 @@ The PI-Mobile V1 trained on a track we built inside my house. It is made of pape
   <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/track-1.png">
 </p>
 
-## The learning algorithm : DQL
+## The learning algorithm - DQL
 
 <p align="center">
   <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/graph-agent.png">
