new draft blog pimobile

--- a/blog/_posts/2020-03-13-Pimobile.md
+++ b/blog/_posts/2020-03-13-Pimobile.md
@@ -13,25 +13,6 @@ title: The PI-Mobile, an autonomous lego car powered by Raspberry Pi
   gtag('config', 'UA-145347384-1');
 </script>
 
-<style TYPE="text/css">
-code.has-jax {font: inherit; font-size: 100%; background: inherit; border: inherit;}
-</style>
-<script type="text/x-mathjax-config">
-MathJax.Hub.Config({
-    tex2jax: {
-        inlineMath: [['$','$'], ['\\(','\\)']],
-        skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'] // removed 'code' entry
-    }
-});
-MathJax.Hub.Queue(function() {
-    var all = MathJax.Hub.getAllJax(), i;
-    for(i = 0; i < all.length; i += 1) {
-        all[i].SourceElement().parentNode.className += ' has-jax';
-    }
-});
-</script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-AMS_HTML-full"></script>
-
 
 When we started talking about this project with [Matthias]([add linkedin link](https://www.linkedin.com/in/matthias-cremieux-4b1222153/)), we knew that both building a Lego motorized car, and learning to drive with real life Deep Reinforcement Learning was [possible](https://arxiv.org/pdf/1807.00412.pdf). However, we wanted to do both at the same time. We recently acquired a Raspberry Pi 4b and knew that the power limitations set by the previous model vanished. However, we didn't know exactly how to fit everything into a lego car, and how to train it properly. We came up with 2 cars, and 2 methods of learning :
 
@@ -75,7 +56,7 @@ We also used a raspberry camera on top of the car. This camera was the only inpu
 The PI-Mobile V1 trained on a track we built inside my house. It is made of paper and is of 8 meters long. However, it has a bridge in the middle, a bridge the car could never learn to pass properly (because it struggles going only forward because of bad conception...). Because of this, we splitted the track into 2 parts: a training part and a testing part :
 
 <p align="center">
-  <img src="{{ site.url }}/imgs/2019-08-06-DRL-FM-review/R100-GIF.gif">
+  <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/img-track-v1.jpeg">
 </p>
 
 <p align="center">
