new draft blog pimobile

--- a/blog/_posts/2020-03-13-Pimobile.md
+++ b/blog/_posts/2020-03-13-Pimobile.md
@@ -104,3 +104,8 @@ An example of a training episode is available below :
 <p align="center">
   <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/car-v1.gif">
 </p>
+
+
+# References : 
+
+1. [Waybe - Learning to Drive in a day](https://arxiv.org/pdf/1807.00412.pdf)
