new draft blog pimobile

--- a/blog/_posts/2020-03-13-Pimobile.md
+++ b/blog/_posts/2020-03-13-Pimobile.md
@@ -43,6 +43,12 @@ We decided to choose a 3-engines solution : two at the back of the car that woul
   <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/components.jpeg">
 </p>
 
+<center>
+<em>
+From top left to bottom right : Lego Mindstorm cables, RaspberyPi 4b + BrickPi, 8 AA batteries, RasbperryPi 3b + Lithium battery + fan, 2 Large Lego Mindstorm motors, 1 Medium Lego Mindsotrm rotor
+</em>
+</center>
+
 We chose to separate the car electronic system in two halves : one half would be the core of the car and would be linked to the motors, power them, and would take care of the DRL part of the project, and the second half would be here to cool the first part, as all the operations listed above are really energy-consuming. 
 
 The core part consists of a raspberry Pi 4b (we chose this device to be the center of all the operations because of its huge specifications compared to the rasberry pi 3) and a card from dexter industries that manages the like with the lego technics. Whereas the secondary part consists of a battery powering a raspberry pi 3 that powers a small fan, installed inbetween the two cards of the car's core. While using a rp3 to power a fan seems a bit of an overkill, it also allows us a convenient flexibility in programming, were we to decide to use a Master/slave architecture to compute the DRL part if the RP4 capped its power due to overheat. 
