new draft blog pimobile

--- a/blog/_posts/2020-03-13-Pimobile.md
+++ b/blog/_posts/2020-03-13-Pimobile.md
@@ -23,9 +23,21 @@ When we started talking about this project with [Matthias]([add linkedin link](h
   <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/car-v1.jpeg">
 </p>
 
+<center>
+<em>
+The first car we built, not the better looking...
+</em>
+</center>
+
 <p align="center">
   <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/car-v2.jpeg">
 </p>
+
+<center>
+<em>
+The Pi-Mobile V2, based on a Lego Technique Porsche Model
+</em>
+</center>
 
 The first one drove on an inside track built in my home, while the second drove outside.
 
@@ -104,6 +116,12 @@ Overall, our car learned to drive on the testing track in less than 50 episodes 
 <p align="center">
   <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/distance-v1.png">
 </p>
+
+<center>
+<em>
+Distance autonomously driven by the car on the testing track
+</em>
+</center>
 
 An example of a training episode is available below : 
 
