new draft blog pimobile

--- a/blog/_posts/2020-03-13-Pimobile.md
+++ b/blog/_posts/2020-03-13-Pimobile.md
@@ -132,4 +132,4 @@ An example of a training episode is available below :
 
 # References : 
 
-1. [Waybe - Learning to Drive in a day](https://arxiv.org/pdf/1807.00412.pdf)
+1. [Wayve - Learning to Drive in a day](https://arxiv.org/pdf/1807.00412.pdf)
