new draft blog pimobile

--- a/blog/_posts/2020-03-13-Pimobile.md
+++ b/blog/_posts/2020-03-13-Pimobile.md
@@ -129,6 +129,10 @@ An example of a training episode is available below :
   <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/car-v1.gif">
 </p>
 
+# PI-Mobile V2 
+
+
+
 
 # References : 
 
