new draft blog pimobile

--- a/blog/_posts/2020-03-13-Pimobile.md
+++ b/blog/_posts/2020-03-13-Pimobile.md
@@ -14,7 +14,7 @@ title: The PI-Mobile, an autonomous lego car powered by Raspberry Pi
 </script>
 
 
-When we started talking about this project with [Matthias]([add linkedin link](https://www.linkedin.com/in/matthias-cremieux-4b1222153/)), we knew that both building a Lego motorized car, and learning to drive with real life Deep Reinforcement Learning was [possible](https://arxiv.org/pdf/1807.00412.pdf). However, we wanted to do both at the same time. We recently acquired a Raspberry Pi 4b and knew that the power limitations set by the previous model vanished. However, we didn't know exactly how to fit everything into a lego car, and how to train it properly. We came up with 2 cars, and 2 methods of learning :
+When we started talking about this project with [Matthias](https://www.linkedin.com/in/matthias-cremieux-4b1222153/)), we knew that both building a Lego motorized car, and learning to drive with real-life Deep Reinforcement Learning was [possible](https://arxiv.org/pdf/1807.00412.pdf). However, we wanted to do both at the same time. We recently acquired a Raspberry Pi 4b and knew that the power limitations set by the previous model vanished. However, we didn't know exactly how to fit everything into a lego car, and how to train it properly. We came up with 2 cars and 2 methods of learning :
 
 * a first model (that looks terrible), driving with a Deep Reinforcement Learning Agent
 * a much better car, driving with an Imitation Learning algorithm
@@ -45,11 +45,11 @@ The first one drove on an inside track built in my home, while the second drove 
 
 ## Assembling the car
 
-The first step of building an lego car is building its structure and deciding the location of each component on the car in order to make it as compact as possible. Considering that we did not look at any car blueprint or tutorial to build it, it was almost like reinventing the car in a way, and consequently, the car we built is clearly not the prettiest of all time! However, it does drive although it is not that fast nor that smooth. 
+The first step of building a lego car is building its structure and deciding the location of each component in the car to make it as compact as possible. Considering that we did not look at any car blueprint or tutorial to build it, it was almost like reinventing the car in a way, and consequently, the car we built is not the prettiest of all time! However, it does drive, although it is not that fast nor that smooth. 
 
-### The stucture
+### The structure
 
-We decided to choose a 3-engines solution : two at the back of the car that would power each wheel separately, and one at the front, that would be powering the steering system that we would've built.
+We decided to choose a 3-engines solution: two at the back of the car that would power each wheel separately, and one at the front, that would be powering the steering system that we would've built.
 
 <p align="center">
   <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/components.jpeg">
@@ -61,17 +61,17 @@ From top left to bottom right : Lego Mindstorm cables, RaspberyPi 4b + BrickPi, 
 </em>
 </center>
 
-We chose to separate the car electronic system in two halves : one half would be the core of the car and would be linked to the motors, power them, and would take care of the DRL part of the project, and the second half would be here to cool the first part, as all the operations listed above are really energy-consuming. 
+We chose to separate the car's electronic system in two halves: one half would be the core of the car and would be linked to the motors, power them, and would take care of the DRL part of the project, and the second half would be here to cool the first part, as all the operations listed above are energy-consuming. 
 
-The core part consists of a raspberry Pi 4b (we chose this device to be the center of all the operations because of its huge specifications compared to the rasberry pi 3) and a card from dexter industries that manages the like with the lego technics. Whereas the secondary part consists of a battery powering a raspberry pi 3 that powers a small fan, installed inbetween the two cards of the car's core. While using a rp3 to power a fan seems a bit of an overkill, it also allows us a convenient flexibility in programming, were we to decide to use a Master/slave architecture to compute the DRL part if the RP4 capped its power due to overheat. 
+The core part consists of a Raspberry Pi 4b (we chose this device to be the center of all the operations because of its vast specifications compared to the Raspberry Pi 3b) and a card from dexter industries that manages the like with the lego technics. In contrast, the second part consists of a battery powering a raspberry pi 3 that powers a small fan, installed in between the two cards of the car's core. While using a Raspberry Pi 3 to power a fan seems a bit of an overkill; it also allows us convenient flexibility in programming, were we to decide to use a Master/slave architecture to compute the DRL part if the RP4 capped its power due to overheating. 
 
-We then used a raspbian image, unaltered, with the convenient package Vncviewer, that allows us to access the raspbian of the pi via ssh protocol. From there, we can launch our script to make the car move.
+We then used a raspbian image, unaltered, with the convenient package Vncviewer, which allows us to access the raspbian of the pi via ssh protocol. From there, we can launch our script to make the car move.
 
 We also used a raspberry camera on top of the car. This camera was the only input our car would use to drive around. 
 
 ### The track 
 
-The PI-Mobile V1 trained on a track we built inside my house. It is made of paper and is of 8 meters long. However, it has a bridge in the middle, a bridge the car could never learn to pass properly (because it struggles going only forward because of bad conception...). Because of this, we splitted the track into 2 parts: a training part and a testing part :
+The PI-Mobile V1 trained on a track we built inside my house. It is made of paper and is 8 meters long. However, it has a bridge in the middle, a bridge the car could never learn to pass properly (because it struggles to go only forward because of a wrong conception). Because of this, we split the track into 2 parts: a training part and a testing part :
 
 <p align="center">
   <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/img-track-v1.jpeg">
@@ -87,13 +87,13 @@ The PI-Mobile V1 trained on a track we built inside my house. It is made of pape
   <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/graph-agent.png">
 </p>
 
-We used a Deep Q-learning agent to train our car to drive, with some mineurs modifications: human control. Since the agent is not interacting with a simulation but with the real wolrd, we are the one telling it when to stop, or when it's good or bad. We setted up several keys: one to pause the current episode, one to finish it when the car is doing something bad, and finally one to end the episode when the car reaches the end of the track. The algorithm is available below : 
+We used a Deep Q-learning agent to train our car to drive, with some miners modifications: human control. Since the agent is not interacting with a simulation but with the real world, we are the one telling it when to stop, or when it's good or bad. We set up several keys: one to pause the current episode, one to finish it when the car is doing something bad, and finally, one to end the episode when the car reaches the end of the track. The algorithm is available below : 
 
 <p align="center">
   <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/algo-1.png">
 </p>
 
-Regarding the reward, we used a simple function: 1 at every step, except when the car fails (-1) or when it reaches the end of the trach (time spent on the track). The goal being to drive properly, and as fast as it could. 
+Regarding the reward, we used a simple function: 1 at every step, except when the car fails (-1) or when it reaches the end of the trach (time spent on the track). The goal is to drive correctly and as fast as it could. 
 
 ```java
 public double reward(String key, double time_since_start) {
@@ -111,7 +111,7 @@ public double reward(String key, double time_since_start) {
 }
 ```
 
-Overall, our car learned to drive on the testing track in less than 50 episodes (arround an hour and a half). We tracked the distance made autonomously on the testing track every 5 training episodes : 
+Overall, our car learned to drive on the testing track in less than 50 episodes (around an hour and a half). We tracked the distance made autonomously on the testing track every 5 training episodes : 
 
 <p align="center">
   <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/distance-v1.png">
@@ -131,9 +131,39 @@ An example of a training episode is available below :
 
 # PI-Mobile V2 
 
+Now that we knew that our car could learn to drive on its own, we wanted to make some modifications: 
+
+<table>
+  <thead>
+    <tr>
+      <th>Car V1</th>
+      <th>Modifications</th>
+    </tr>
+  </thead>
+  <tfoot>
+    <tr>
+    <td>Car's structure was not robust enough</td>
+    <td> Started from an existing Lego technique car </td>
+    </tr>
+  </tfoot>
+  <tbody>
+  <tr>
+    <td>The fan was taking a lot of place</td>
+    <td>Remove the fan and the Raspberry 3</td>
+  </tr>
+    <tr>
+      <td>The DRL agent was not necesseraly the best solution</td>
+      <td> Use of an Imitation Learning algorithm </td>
+    </tr>
+</tr>
+    <tr>
+      <td>The track was too small</td>
+      <td> Train the car on a bigger track outside </td>
+    </tr>
+  </tbody>
+</table>
 
 
-
-# References : 
+# References :  
 
 1. [Wayve - Learning to Drive in a day](https://arxiv.org/pdf/1807.00412.pdf)
