new draft blog pimobile

--- a/blog/_posts/2020-03-13-Pimobile.md
+++ b/blog/_posts/2020-03-13-Pimobile.md
@@ -167,3 +167,5 @@ Now that we knew that our car could learn to drive on its own, we wanted to make
 # References :  
 
 1. [Wayve - Learning to Drive in a day](https://arxiv.org/pdf/1807.00412.pdf)
+2. [Wayve - Urban Driving with Conditional Imitation Learning](https://arxiv.org/pdf/1912.00177.pdf)
+3. [End-to-end Driving via Conditional Imitation Learning - Codevilla et al.](https://arxiv.org/pdf/1710.02410.pdf)
