new draft blog pimobile

--- a/blog/_posts/2020-03-13-Pimobile.md
+++ b/blog/_posts/2020-03-13-Pimobile.md
@@ -70,11 +70,7 @@ We also used a raspberry camera on top of the car. This camera was the only inpu
 
 ### The track 
 
-The PI-Mobile V1 trained on a track we built inside my house. It is made of paper and is 8 meters long. However, it has a bridge in the middle, a bridge the car could never learn to pass properly (because it struggles to go only forward because of a wrong conception). Because of this, we split the track into 2 parts: a training part and a testing part :
-
-<p align="center">
-  <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/img-track-v1.jpeg">
-</p>
+The PI-Mobile V1 trained on a track we built inside my house. It is made of paper and is 8 meters long. However, it has a bridge in the middle, a bridge the car could never learn to pass properly (because it struggles to go only forward, the fault to a wrong steering conception). Because of this, we split the track into 2 parts: a training part and a testing part :
 
 <p align="center">
   <img src="{{ site.url }}/imgs/2020-03-13-Pimobile/track-1.png">
