--- a/blog/_posts/2020-03-13-Pimobile.md
+++ b/blog/_posts/2020-03-13-Pimobile.md
@@ -34,7 +34,7 @@ The first car we built, not the better looking...
 
 <center>
 <em>
-The Pi-Mobile V2, based on a Lego Technique Porsche Model
+The Pi-Mobile V2, based on a Lego Technic Porsche Model
 </em>
 </center>
 
@@ -138,12 +138,12 @@ Now that we knew that our car could learn to drive on its own, we wanted to make
   <tfoot>
     <tr>
     <td>Car's structure was not robust enough</td>
-    <td> Started from an existing Lego technique car </td>
+    <td> Started from an existing Lego Technic car </td>
     </tr>
   </tfoot>
   <tbody>
   <tr>
-    <td>The fan was taking a lot of place</td>
+    <td>The fan system was taking a lot of place</td>
     <td>Remove the fan and the Raspberry 3</td>
   </tr>
     <tr>
@@ -156,6 +156,10 @@ Now that we knew that our car could learn to drive on its own, we wanted to make
     </tr>
   </tbody>
 </table>
+
+## Structure 
+
+We kept the same main composants (Raspberry Pi 4, BrickPi and 3 motors) but changed the rest of the car. We used a [Lego Technic Porsche 911](https://www.amazon.fr/LEGO-Technic-Porsche-42096-construction/dp/B07FP6QNQ7/ref=asc_df_B07FP6QNQ7/?tag=googshopfr-21&linkCode=df0&hvadid=314587880581&hvpos=&hvnetw=g&hvrand=10330215336837655036&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9056237&hvtargid=aud-882886963594:pla-586194956307&psc=1&tag=&ref=&adgrpid=66274120487&hvpone=&hvptwo=&hvadid=314587880581&hvpos=&hvnetw=g&hvrand=10330215336837655036&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9056237&hvtargid=aud-882886963594:pla-586194956307) model as a base for the rest of the car. We removed the V6 engine and replaced it by the Raspberry Pi and the batteries. We also made some modifications to insert the Lego Rotor at the front, and the 2 Lego motors at the back. Using this as a baseline allows the car to be much more stable and with a more precise steering system. 
 
 
 # References :  
